--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
 <div class="jumbotron text-center">
-  <h1>Company</h1> 
+  <h1>My Company</h1> 
   <p>We specialize in blablabla</p> 
   <form class="form-inline">
     <div class="input-group">
